k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saloon-system
  labels:
    name: saloon-system
    environment: development
